# vesc-express-esp32c6

./: .env.esp32  .gitignore  ANDROID_COMPATIBILITY.md  ANDROID_COMPATIBILITY_REPORT.md  ANDROID_TESTING_CHECKLIST.md  AUTONOMOUS_TESTING_COMPLETE.md  BLE_WIFI_DEBUG_ANALYSIS.md  BOOT_LOOP_FIX_SUMMARY.md  BUILD_ARTIFACTS_SUMMARY.md  BUILD_PLAN.md  BUILD_RESULTS.md  BUILD_VALIDATION_REPORT.md  CLAUDE.md  COMPREHENSIVE_VERIFICATION_COMPLETE.md  CROSS_PLATFORM_COMPATIBILITY.md  DEBUGGING_SOLUTION_COMPLETE.md  DEBUG_AND_FIX_REPORT.md  DEVELOPMENT_OPTIMIZATIONS_SUMMARY.md  Dockerfile.android  ESP32C6_RECOVERY_REPORT.md  ESP32_C6_COMMUNICATION_VALIDATION_REPORT.md  ESP32_C6_CONFIGURATION_GUIDE.md  ESP32_C6_DEPLOYMENT_CHECKLIST.md  ESP32_C6_DEPLOYMENT_READY.md  ESP32_C6_HARDWARE_COMPATIBILITY_VALIDATION.md  ESP32_C6_HARDWARE_PINOUT.md  ESP32_C6_IMPLEMENTATION_REPORT.md  ESP32_C6_PROTOCOL_COMPLIANCE_REPORT.md  ESP32_C6_PROTOCOL_COMPLIANCE_TEST.c  ESP32_C6_TECHNICAL_SUMMARY.md  ESP32_C6_VESC_TOOL_COMPATIBILITY_SOLUTION.md  ESP32_DEBUG_QUICK_REFERENCE.md  ESP32_IDF_DEBUGGING_SIMPLIFIED.md  ESP32_TOOL_DISCOVERABILITY_IMPLEMENTATION.md  ESP32_TROUBLESHOOTING.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_HARDWARE_VERIFICATION.md  FINAL_STATUS.md  FINAL_VALIDATION_COMPLETE.md  FINAL_VALIDATION_REPORT.md  (+102 more)
backward_compatibility_npm/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TEAM_ONBOARDING.md  TOOL_DISCOVERY_GUIDE.md  npm_analytics_report.sh
compat_test/: compattest_analytics_report.sh  compattest_ultimate
curl_test/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TEAM_ONBOARDING.md  TOOL_DISCOVERY_GUIDE.md  curl_recommendations.json  curl_ultimate
debug_test/: testdebug_ultimate
docker_test/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TOOL_DISCOVERY_GUIDE.md  docker_analytics_report.sh  docker_recommendations.json  docker_ultimate
fastmcp_test/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TEAM_ONBOARDING.md  TOOL_DISCOVERY_GUIDE.md  fastmcp_analytics_report.sh  fastmcp_recommendations.json  fastmcp_ultimate
final_test/: finaltest_ultimate
final_test_full/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TEAM_ONBOARDING.md  TOOL_DISCOVERY_GUIDE.md  finaltest_full_analytics_report.sh  finaltest_full_recommendations.json  finaltest_full_ultimate
git_test/: git_ultimate
integration_test_docker/: ANALYTICS_AND_OPTIMIZATION.md  CROSS_PLATFORM_COMPATIBILITY.md  TEAM_ONBOARDING.md  TOOL_DISCOVERY_GUIDE.md  docker_ultimate
integration_test_fastmcp/: fastmcp_ultimate
integration_test_git/: git_analytics_report.sh  git_ultimate
integration_test_pytest/: pytest_ultimate
logs/: verification_20250722_234158.json
main/: CMakeLists.txt  adc.c  adc.h  android_compat.c  android_compat.h  ble_c6_enhancements.c  ble_c6_enhancements.h  comm_ble.c  comm_can.c  comm_uart.c  comm_wifi.c  lispif.c  (+24 more)
(+86 files in other folders)
